tests/passing/control.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk pass

fn test() {
    if 1 {}

    while 1 {}
}
