tests/failing/eof1.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk fail

fn unended() {
# /tk error
